# hookwise

./: .coderabbit.yaml  .commitlintrc.yml  .gitignore  .gitleaks.toml  .golangci.yml  .goreleaser.yml  .ls-lint.yml  .mcp.json  .pre-commit-config.yaml  8p4mgjm5vvebrcrpjpfujvsdl0puheip.darc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOLT_REMOTE.md  README.md  SECURITY.md  Taskfile.yml  dagger.json  dangerfile.ts  demo-timer.tsx  demo.tape  deps.go  go.mod  go.sum  hookwise.yaml  ljtn8kngus5gcecuanc9sbsgghjhvil1.darc  manifest  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts  vitest.config.ts
.claude/: decision-log.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci.yml  commitlint.yml  danger.yml  docs.yml  nightly.yml  publish.yml  release.yml  secret-scan.yml  tui-tests.yml
.openlore/decisions/: pending.json
cmd/hookwise/: cli_test.go  cmd_audit.go  cmd_audit_fix.go  cmd_audit_fix_test.go  cmd_audit_test.go  cmd_daemon.go  cmd_daemon_canonical_test.go  cmd_daemon_custom_test.go  cmd_daemon_statedir_test.go  cmd_daemon_tui_singleton_test.go  cmd_daemon_tui_watchdog.go  cmd_daemon_tui_watchdog_test.go  cmd_diff.go  cmd_dispatch.go  cmd_dispatch_budget_test.go  cmd_dispatch_cost_test.go  cmd_dispatch_latency_test.go  cmd_doctor.go  cmd_doctor_cost_test.go  cmd_doctor_effective_test.go  cmd_doctor_feedhealth_test.go  cmd_doctor_feedlist_test.go  cmd_doctor_latency_test.go  cmd_init.go  cmd_init_scan_test.go  cmd_log.go  cmd_migrate.go  cmd_migrate_test.go  cmd_notifications.go  cmd_notifications_test.go  cmd_snapshot.go  cmd_stats.go  cmd_stats_test.go  cmd_status_line.go  cmd_status_line_calendar_e2e_test.go  cmd_status_line_calendar_test.go  cmd_status_line_feeddata_test.go  cmd_status_line_fleet.go  cmd_status_line_fleet_test.go  cmd_status_line_notif_test.go  (+9 more)
dagger/: go.mod  main.go
docs/: RELEASE_NOTES_v1.2.0.md  architecture.md  boundaries.md  cli.md  getting-started.md  index.md  openlore-onboarding-drift-report.md  philosophy.md  retro-status-line-bugs-50.md  roadmap.md  social-media-drafts.md  tech-stack.md  tui-guide.md
docs/.vitepress/: config.ts
docs/assets/: feed-platform.excalidraw  guard-evaluation.excalidraw  three-phase-engine.excalidraw
docs/decisions/: 0001-dolt-to-sqlite.md
docs/features/: analytics.md  coaching.md  feeds.md  guards.md  status-line.md
docs/guide/: analytics-guide.md  creating-a-recipe.md  feeds-guide.md  getting-started.md
docs/reference/: cli-reference.md  hook-events.md  migration.md  troubleshooting.md  tui-guide.md
examples/: analytics.yaml  coaching.yaml  full.yaml  minimal.yaml
hooks/: agent-tracker.sh
hookwise/: __init__.py  __main__.py  agents.py  cli.py  config.py  cost.py  dispatcher.py  errors.py  greeting.py  guards.py  sounds.py  state.py  transcript.py
hookwise/analytics/: __init__.py  authorship.py  db.py  session.py
hookwise/coaching/: __init__.py  builder_trap.py  communication.py  metacognition.py
hookwise/recipes/: __init__.py  loader.py
hookwise/status_line/: __init__.py  renderer.py  segments.py
hookwise/testing/: __init__.py  guard_tester.py  result.py  runner.py
internal/analytics/: analytics.go  analytics_test.go  dolt.go  dolt_test.go.bak  helpers_test.go  history.go  history_test.go  insights_queries.go  insights_queries_test.go  latency_test.go  migration_state.go  migration_state_test.go  persist_test.go  session_liveness.go  session_liveness_test.go  snapshot.go  snapshot_statedir_test.go  snapshot_test.go  sqlite.go  sqlite_statedir_test.go  state.go  state_test.go
internal/arch/: arch_test.go  producer_wiring_test.go  vaporware_refs_test.go  writer_wiring_test.go
internal/bridge/: bridge.go  bridge_test.go
internal/chaos/: calendar_chaos_test.go  chaos_test.go  fleet_load_test.go
internal/coaching/: coaching.go  types.go  types_test.go
internal/contract/: contract_test.go
internal/core/: analytics_types.go  config.go  config_calendar_statedir_test.go  config_test.go  config_types.go  constants.go  dispatch_types.go  dispatcher.go  dispatcher_test.go  errors.go  feed_types.go  guard_types.go  guards.go  guards_test.go  handler_types.go  handlers.go  logger_test.go  segment_config_test.go  state.go  state_test.go  stdin.go  types.go  types_test.go  warnings.go  warnings_test.go
internal/feeds/: builtin.go  client.go  client_statedir_test.go  client_test.go  custom.go  daemon.go  daemon_statedir_test.go  envelope.go  envelope_test.go  feed_status.go  feed_status_test.go  feeds_test.go  insights_source.go  polling.go  (+19 more)
openspec/: config.yaml  rag-manifest.json
scripts/: branch-containment-report.sh  calendar-feed.py  install.sh  pre-test-resource-check.sh  publish-check.sh  tenet-gate.sh  test-branch-containment-report.sh  test-publish-check.sh  test-resource-check.sh  test-tenet-gate.sh
src/: index.ts
tests/: conftest.py  test_analytics.py  test_authorship.py  test_cli.py  test_coaching.py  test_config.py  test_dispatcher.py  test_errors.py  test_guards.py  test_handlers.py  test_integration.py  test_package.py  test_recipes.py  test_state.py  test_status_line.py  test_testing.py
tui/: pyproject.toml
tui/hookwise_tui/: __init__.py  __main__.py  app.py  app.tcss  data.py
tui/hookwise_tui/tabs/: analytics.py  coaching.py  dashboard.py  feeds.py  guards.py  insights.py  recipes.py  status.py
tui/hookwise_tui/widgets/: __init__.py  feature_card.py  feed_health.py  sparkline.py  weather_background.py  weather_data.py
tui/prototypes/: cyberpunk_mascot.py  heatmap_gamify.py  rain_weather.py
tui/tests/: test_app.py  test_data.py  test_snapshots.py  test_status_live_output.py  test_status_segments.py  test_terminal_e2e.py  test_weather.py
tui/tests/__snapshots__/test_snapshots/: test_tab_snapshot[analytics].raw  test_tab_snapshot[coaching].raw  test_tab_snapshot[dashboard].raw  test_tab_snapshot[feeds].raw  test_tab_snapshot[guards].raw  test_tab_snapshot[insights].raw  test_tab_snapshot[recipes].raw  test_tab_snapshot[status].raw
(+315 files in other folders)
