[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hookwise-tui"
version = "1.0.0"
description = "Rich terminal UI for hookwise — Claude Code hooks framework"
requires-python = ">=3.10"
dependencies = [
    "textual>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "anthropic>=0.40.0",
]

[project.scripts]
hookwise-tui = "hookwise_tui.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-textual-snapshot>=1.0.0",
    "ruff==0.15.17",
    "mypy==1.14.1",
    "types-PyYAML>=6.0",
]

[tool.ruff]
exclude = ["prototypes", ".venv"]
target-version = "py311"

# mypy static type checking (#48).
#
# Adopted as a GATING baseline: the config passes on the current tree and so
# guards every module plus all new code from new type errors — the same staged
# shape used for ruff (#45) and golangci-lint (#44, errcheck disabled).
# Ratchet history (#48): Phase 1 cleared the error backlog (no ignore_errors
# override remains); Phase 2 enabled `disallow_untyped_defs` on the data.py
# boundary module. Phase 3 (this config) flips `disallow_untyped_defs = true` at
# the TOP LEVEL, so ALL production source (hookwise_tui/**, 18 files) now requires
# full annotation — including the Go→JSON→Python seam where Bug #29 lived. The
# only remaining permissive scope is the test modules listed in the override
# below, which still carry untyped test defs (~150) and are ratcheted separately.
# New production code cannot regress. prototypes/ is excluded (throwaway code).
[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = "prototypes"

# Test modules with a remaining untyped-def backlog — quarantined from the
# strict gate and annotated incrementally (#48 Phase 3 tail). Production source
# is fully strict; only these test files stay permissive.
[[tool.mypy.overrides]]
module = [
    "tests.test_data",
    "tests.test_snapshots",
    "tests.test_status_live_output",
    "tests.test_status_segments",
    "tests.test_terminal_e2e",
    "tests.test_weather",
]
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "terminal_e2e: end-to-end tests that spawn a real Claude Code session in a PTY (run with -m terminal_e2e; deselected by default)",
]
